[package]
name = "pxsol-ss"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2"

#[patch.crates-io]
#blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

[features]
#custom-heap = []
#custom-panic = []
default = ["program_b"]
program_a = []
program_b = []